--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fczuardi/hellobot#readme",
   "devDependencies": {
-    "botbuilder": "^0.6.5"
+    "botbuilder": "^0.6.5",
+    "restify": "^4.0.4"
   }
 }
